Initial homepage build

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,21 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<!-- SEO Meta Tags -->
+		<title>nanocosmos - Sub-second Global Video Streaming</title>
+		<meta name="description" content="nanocosmos delivers sub-second global video streaming via proprietary MoQ technology and dedicated CDN infrastructure. Trusted by leading iGaming operators worldwide." />
+		<meta name="keywords" content="ultra-low latency streaming, MoQ technology, live video streaming, iGaming streaming, WebRTC, RTMP, CDN, nanocosmos" />
+		
+		<!-- Open Graph Meta Tags -->
+		<meta property="og:title" content="nanocosmos - Sub-second Global Video Streaming" />
+		<meta property="og:description" content="Proprietary MoQ technology delivering ultra-low latency streaming at global scale. 25 years of innovation in video technology." />
+		<meta property="og:type" content="website" />
+		
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="nanocosmos - Sub-second Global Video Streaming" />
+		<meta name="twitter:description" content="Proprietary MoQ technology delivering ultra-low latency streaming at global scale." />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
